--- a/Proyecto_marca_css.html
+++ b/Proyecto_marca_css.html
@@ -6,7 +6,7 @@
     <body>
         <style>
             .columna_80{
-                width: 80% 
+                width:50% 
                 align="center"
             }
 
@@ -31,13 +31,13 @@
           <!--1.fila-->
           <tr>
                   <!--1.columna-->
-                   <td class="columna_80" align="center" >
+                   <td style="width: 80%">
                         <a href="ejercicio11_marca.html">
-                        <img src="img_marca/titulo.png" id="imagen_12"> 
+                        <img src="img_marca/titulo.png" style="width: 50%"> 
                         </a>  
                     </td>
                      <!--2.columna-->
-                    <td align="center" class=".columna_4">
+                    <td align="center" style="width: 4%">
                        <table border="1">
                            <tr>
                                <td align="center">
