--- a/ejercicios_css/ejemplocss.html
+++ b/ejercicios_css/ejemplocss.html
@@ -15,12 +15,20 @@
     .titulo-red {
         color:red;
     }
-    /* komentarioa */
-    #izena {
-        color:cyan;
-        background-color: darkblue  ;
-        
+
+    .titulo-tamaina{
+        font-size: 40px
     }
+
+    .letra_cyan{
+        color: cyan;
+    }
+
+    .fondo_azul{
+        background-color: darkblue;
+    }
+    /* komentarioa */
+   
     body {
         background-color: black;
     }
@@ -30,8 +38,8 @@
     <!-- inline CSS -->
     <h1 style="color:blueviolet; background-color: gold;">Adibidea 1</h1>
     <h1>Adibidea 2</h1> 
-    <h1 class="titulo-red">Adibidea 3</h1>
-    <h1 id="izena">Adibidea 4</h1>
+    <h1 class="titulo-red titulo-tamaina">Adibidea 3</h1>
+    <h1 class="letra_cyan fondo_azul">Adibidea 4</h1>
 
 </body>
 </html>
