--- a/ejercicios_css/ejemplo_div_css.html
+++ b/ejercicios_css/ejemplo_div_css.html
@@ -12,13 +12,17 @@
         .urdin{
             background-color: blue;
         }
+
+        .cursiva{
+            font-style: italic
+        }
         </style>
     </head>
     <body>
 
         <div>
             <h2>London</h2>
-            <p>London is the capital city of England. It is the most populous city in the United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
+            <p>London is the capital city of <span class="cursiva">England</span>. It is the most populous city in the United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
           </div>
 
         <div class="urdin">
