--- a/ejercicios_css/ejercicio_div.html
+++ b/ejercicios_css/ejercicio_div.html
@@ -4,12 +4,14 @@
         <meta charset="UTF-8">
         <style>
         div{
-            background-color: brown;
-            color: blue;
             padding: 20px;
             margin: 20px;
         }
 
+        .uno{
+            background-color: brown;
+            color: blue;
+        }
         .dos{
             background-color: blue;
             color: brown;
@@ -17,22 +19,24 @@
         </style>
     </head>
     <body>
-        <div align="center">
-            <h2>Messi</h2>
-            <img src="img_css/messi.jpg">
-            <p>Es un futbolista argentino que juega como delantero o centrocampista</p>
-        </div>
+        <div>
+            <div class="uno">
+                <h2>Messi</h2>
+                <img src="img_css/messi.jpg">
+                <p>Es un futbolista argentino que juega como delantero o centrocampista</p>
+            </div>
     
-        <div align="center" class="dos">
-            <img src="img_css/suarez.jpg">
-            <h2>Messi</h2>
-            <p>Es un futbolista uruguayo-italiano que juega como delantero en el Fútbol Club Barcelona</p>
-        </div>
+            <div class="dos">
+                <img src="img_css/suarez.jpg">
+                <h2>Messi</h2>
+                <p>Es un futbolista uruguayo-italiano que juega como delantero en el Fútbol Club Barcelona</p>
+            </div>
            
-        <div align="center">
-            <p>Es un futbolista francès que juega como delantero en el Fútbol Club Barcelona</p>
-            <h2>Griezmann</h2>
-            <img src="img_css/griezmann.jpg">
-        </div>
+            <div class="uno">
+                <p>Es un futbolista francès que juega como delantero en el Fútbol Club Barcelona</p>
+                <h2>Griezmann</h2>
+                <img src="img_css/griezmann.jpg">
+            </div>
+        </div>    
     </body>
 </html>
