--- a/2ebal/proyecto/proyecto-flex.html
+++ b/2ebal/proyecto/proyecto-flex.html
@@ -23,8 +23,9 @@
             }
 
             .flex-container_articulos > div1 {
-                background-color: rgb(14, 235, 235);
+                background-color: rgb(20, 230, 230);
                 padding: 30px;
+                width: 40%
                 
             }
         
@@ -42,7 +43,7 @@
             }
 
             .letra_cross{
-                font-family:   'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+                font-family:   'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
                 font-size: 40px;
                 margin-top: 130px;
             }
