--- a/2ebal/ejemplos-formularios/ejercicio_formulario.html
+++ b/2ebal/ejemplos-formularios/ejercicio_formulario.html
@@ -9,12 +9,12 @@
             }
 
             .flex-container > div{
-                background-color:gold;
+                background-color:rgba(255, 217, 0, 0.959);
                 padding: 20px;
             }
 
             body{
-                background-color: black;
+                background-color: blueviolet;
             }
         </style>
     </head>
