--- a/Ejercicios/semana2/ejercicio_semana2.html
+++ b/Ejercicios/semana2/ejercicio_semana2.html
@@ -92,7 +92,7 @@
             <!--Barra y boton-->
             <form class="form-inline">
                 <input class="form-control ml-2" type="text" placeholder="Buscar...">
-                <button class="btn ml-2 boton_suscribe letra_menu" type="submit" onclick="texto()">SUSCRIBIRSE AHORA</button>
+                <button class="btn ml-2 boton_suscribe letra_menu" type="submit" onclick="texto()">SUSCRIBIRSE</button>
             </form>
 
             <div class="toast">
